objects/Account.object
<CustomObject>
    <fields>
        <fullName>New_Field_1__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Test Description</description>
        <inlineHelpText>Test Help Text</inlineHelpText>
        <label>New Field 1</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Field_2__c</fullName>
        <defaultValue>false</defaultValue>
        <description>test 2</description>
        <inlineHelpText>test 2</inlineHelpText>
        <label>New Field 2</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>New_Field_3__c</fullName>
        <defaultValue>false</defaultValue>
        <description>test 3</description>
        <inlineHelpText>test 3</inlineHelpText>
        <label>New Field 3</label>
        <type>Checkbox</type>
    </fields>
    <listViews>
        <fullName>AllAccounts</fullName>
        <columns>ACCOUNT.NAME</columns>
        <columns>ACCOUNT.ADDRESS1_STATE</columns>
        <columns>ACCOUNT.PHONE1</columns>
        <columns>ACCOUNT.TYPE</columns>
        <columns>CORE.USERS.FIRST_NAME</columns>
        <columns>CORE.USERS.LAST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>All Accounts</label>
    </listViews>
    <listViews>
        <fullName>MyAccounts</fullName>
        <filterScope>Mine</filterScope>
        <label>My Accounts</label>
    </listViews>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>Test_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF ( Name = &apos;Test&apos;, true, false )</errorConditionFormula>
        <errorDisplayField>Name</errorDisplayField>
        <errorMessage>Change in Dev Branch</errorMessage>
    </validationRules>
</CustomObject>